@@ -30,6 +30,7 @@ em 1 -
 hy 1 -
 \- 1 -
 rs 1 %\134
+dq 1 %\042
 bu 1 +\033[\b\033]O
 sq 2 \[]
 ru 1 _
